# LogbookKonni-1.2

./: CMakeLists.txt  README  README.md  ReadMe.txt  cs.diff  logbookkonni_pi.nsi
buildosx/InstallOSX/: logbookkonni_pi.pkgproj.in
cmake/: PluginConfigure.cmake
data/: Help.html
data/HTMLLayouts/logbook/: Label_Remarks_append_Clouds.html
po/: cs.po  da.po  de.mo  de.po  es.po  fr.mo  fr.po  logbookkonni_pi.pot  nl.po  pl.po  tr_TR.po
src/: CrewList.cpp  CrewList.h  Logbook.cpp  Logbook.h  LogbookDialog.cpp  LogbookDialog.h  LogbookHTML.cpp  LogbookHTML.h  LogbookOptions.cpp  LogbookOptions.h  Maintenance.cpp  Maintenance.h  Options.cpp  Options.h  OverView.cpp  boat.cpp  logbook_pi.cpp  logbook_pi.h
src/nmea0183/: sentence.cpp
